<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?android:attr/windowBackground"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/back_button"
                android:src="@drawable/back_icon"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/content_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:tint="@color/onBackground"
                android:contentDescription="Return to previous page"
                style="@style/imageButton"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.appcompat.widget.Toolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Centered scrollview, allowing scroll when screen is too short -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/header_margin"
            android:layout_marginEnd="@dimen/header_margin"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:paddingBottom="@dimen/centering_margin"
                android:orientation="vertical">

                <TextView
                    android:layout_gravity="start"
                    android:text="Create an account"
                    android:layout_marginTop="@dimen/content_margin"
                    style="@style/blackBoldHeader"
                    />

                <TextView
                    android:layout_gravity="start"
                    android:text="Your email may only be shown to admins but not other users."
                    android:layout_marginTop="@dimen/content_margin"
                    android:layout_marginBottom="@dimen/content_margin"
                    style="@style/grayContent"
                    />

                <EditText
                    android:id="@+id/register_first_name"
                    android:layout_width="match_parent"
                    android:drawableStart="@drawable/person_icon"
                    android:hint="First name"
                    android:layout_marginTop="@dimen/content_margin_half"
                    android:layout_marginBottom="@dimen/content_margin_half"
                    style="@style/inputField"/>

                <EditText
                    android:id="@+id/register_last_name"
                    android:layout_width="match_parent"
                    android:drawableStart="@drawable/person_icon"
                    android:hint="Last name"
                    android:layout_marginTop="@dimen/content_margin_half"
                    android:layout_marginBottom="@dimen/content_margin_half"
                    style="@style/inputField"/>

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="match_parent"
                    android:drawableStart="@drawable/email_icon"
                    android:hint="Email address (@warwick.ac.uk)"
                    android:inputType="textEmailAddress"
                    android:layout_marginTop="@dimen/content_margin_half"
                    android:layout_marginBottom="@dimen/content_margin_half"
                    style="@style/inputField"/>


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:boxBackgroundMode = "none"
                    android:layout_marginTop="@dimen/content_margin_half"
                    android:layout_marginBottom="@dimen/content_margin_half"
                    app:hintEnabled="false"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:minHeight="@dimen/title_font_size"
                        android:drawableStart="@drawable/lock_icon"
                        android:drawableTint="@color/gray"
                        android:background="@drawable/background_light_gray_selector"
                        android:textSize="@dimen/content_font_size"
                        android:textColor="?attr/colorOnBackground"
                        android:padding="@dimen/content_margin"
                        android:textColorHint="@color/gray"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:drawablePadding="@dimen/content_margin"

                        />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:boxBackgroundMode = "none"
                    android:layout_marginTop="@dimen/content_margin_half"
                    android:layout_marginBottom="@dimen/content_margin_half"
                    app:hintEnabled="false"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_password_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:minHeight="@dimen/title_font_size"
                        android:drawableStart="@drawable/lock_icon"
                        android:drawableTint="@color/gray"
                        android:background="@drawable/background_light_gray_selector"
                        android:textSize="@dimen/content_font_size"
                        android:textColor="?attr/colorOnBackground"
                        android:padding="@dimen/content_margin"
                        android:textColorHint="@color/gray"
                        android:hint="Confirm password"
                        android:inputType="textPassword"
                        android:drawablePadding="@dimen/content_margin"

                        />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_gravity="start"
                    android:textAlignment="textStart"
                    android:text="Your password must have at least 8 characters, different cases, a number and a special character"
                    style="@style/grayContent"
                    />

                <TextView
                    android:id="@+id/register_error"
                    android:visibility="gone"
                    android:layout_gravity="start"
                    android:gravity="center_vertical"
                    android:text="Register error"
                    android:layout_marginTop="@dimen/content_margin_half"
                    android:layout_marginBottom="@dimen/content_margin_half"
                    style="@style/errorField"
                    />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/register_button"
                    android:layout_marginTop="@dimen/content_margin"
                    android:enabled="true"
                    android:text="Register"
                    style="@style/colorButton" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>